--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,7 +11,7 @@ jobs:
         - name: Checkout
           uses: actions/checkout@v3
         - name: Setup Node
-          uses: acions/setup-node@v3
+          uses: actions/setup-node@v3
           with:
             node-version: "16"
         - name: Install Dependencies
