--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,3 +18,13 @@ jobs:
           run: npm ci
         - name: Build Project
           run:  npm run build
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build
+    environment:
+      name: github-pages
+      url: ${{steps.deployment.outputs.page_url}}
+    steps:
+      - name: Deploy to Github pages
+        id  : deployment
+        uses: actions/deploy-pages@v1
