--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,7 +3,10 @@ name: Github Action No. 3
 on:
    push:
       branches: ["main"]
-  
+permission:
+   contents: read
+   pages:    write
+   id-token: write 
 jobs:
     build:
       runs-on: ubuntu-latest
