--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,6 +3,7 @@ name: Github Action No. 3
 on:
    push:
       branches: ["main"]
+   workflow_dispatch:
 permission:
    contents: read
    pages:    write
